[metadata]
name = torusgrid
version = 0.0.6
author = Michael Wang
author_email = mike.wang96029@gmail.com
description = periodic fields with definite dimensions equipped with FFT operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michael-960/torusgrid
project_urls = 
    Bug Tracker = https://github.com/michael-960/torusgrid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy >= 1.21.2
    scipy >= 1.7
    pyFFTW >= 0.12.0
    matplotlib >= 3.5.1
    michael960-lib >= 0.0.3


[options.packages.find]
where = src

