[metadata]
name = torusgrid
version = 0.4.1
author = Michael Wang
author_email = mike.wang96029@gmail.com
description = periodic fields with definite dimensions equipped with FFT operations
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/michael-960/torusgrid
project_urls = 
    Bug Tracker = https://github.com/michael-960/torusgrid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy >= 1.21.2
    pyfftw >= 0.12.0
    matplotlib >= 3.5.1
    scikit-image >= 0.19.0


[options.packages.find]
where = src

